force-app/main/default/objects/KDCE_CouponHistory__c/KDCE_CouponHistory__c.object-meta.xml
<CustomObject>
    <description>[KDCE] Coupon Journey</description>
    <label>Coupon Journey</label>
    <nameField>
        <displayFormat>CH-{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coupon Journeys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>