force-app/main/default/objects/KDCE_CouponHistory__c/fields/ActionChannel__c.field-meta.xml
<CustomField>
    <fullName>ActionChannel__c</fullName>
    <description>[KDCE] History Action Channel : Online / Offline / Call Center</description>
    <label>Action Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>