force-app/main/default/objects/KDCE_CouponHistory__c/fields/ActionDate__c.field-meta.xml
<CustomField>
    <fullName>ActionDate__c</fullName>
    <description>[KDCE] Coupon이 변경된 Date/Time</description>
    <label>Action Date Time</label>
    <type>DateTime</type>
</CustomField>