force-app/main/default/objects/KDCE_CouponHistory__c/fields/ActionType__c.field-meta.xml
<CustomField>
    <fullName>ActionType__c</fullName>
    <description>[KDCE] Coupon Action Type</description>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Produce</fullName>
            </value>
            <value>
                <fullName>Issue</fullName>
            </value>
            <value>
                <fullName>Use</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>