force-app/main/default/objects/KDCE_CouponHistory__c/fields/Coupon__c.field-meta.xml
<CustomField>
    <fullName>Coupon__c</fullName>
    <label>Coupon</label>
    <referenceTo>KDCE_Coupon__c</referenceTo>
    <relationshipLabel>Coupon Journeys</relationshipLabel>
    <relationshipName>CouponHistories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>