force-app/main/default/objects/KDCE_CouponHistory__c/fields/fm_ActionDate__c.field-meta.xml
<CustomField>
    <fullName>fm_ActionDate__c</fullName>
    <formula>DATEVALUE(ActionDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Date</label>
    <type>Date</type>
</CustomField>