force-app/main/default/objects/KDCE_CouponHistory__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>KDCE_Order__c</referenceTo>
    <relationshipName>CouponHistory</relationshipName>
    <type>Lookup</type>
</CustomField>