force-app/main/default/objects/KDCE_CouponHistory__c/fields/StoreCode__c.field-meta.xml
<CustomField>
    <fullName>StoreCode__c</fullName>
    <label>Store Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>