force-app/main/default/objects/KDCE_CouponHistory__c/fields/StoreName__c.field-meta.xml
<CustomField>
    <fullName>StoreName__c</fullName>
    <label>Store Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>