force-app/main/default/objects/KDCE_CouponHistory__c/fields/test_Logic_Check__c.field-meta.xml
<CustomField>
    <fullName>test_Logic_Check__c</fullName>
    <formula>Contact__c != Coupon__r.Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test Logic Check</label>
    <type>Checkbox</type>
</CustomField>