force-app/main/default/objects/KDCE_CouponHistory__c/fields/testMGMCouponCodeWithContact__c.field-meta.xml
<CustomField>
    <fullName>testMGMCouponCodeWithContact__c</fullName>
    <formula>Contact__r.KDCE_MGMCode__c =  Coupon__r.CouponCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>testMGMCouponCodeWithContact</label>
    <type>Checkbox</type>
</CustomField>